# ko-smooth

./: .gitignore  CMakeLists.txt  README.md
include/: csv.h  csvtools.h  numtools.h  smooth.h
src/: .main.cpp.swp  csvtools.cpp  main.cpp  numtools.cpp  smooth.cpp
